; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_exec.c_dump_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_exec.c_dump_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.file*, i8*, i32, i32*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dump_write(%struct.file* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = call i32 (...) @dump_interrupted()
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %23, label %9

9:                                                ; preds = %3
  %10 = load %struct.file*, %struct.file** %4, align 8
  %11 = getelementptr inbounds %struct.file, %struct.file* %10, i32 0, i32 1
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32 (%struct.file*, i8*, i32, i32*)*, i32 (%struct.file*, i8*, i32, i32*)** %13, align 8
  %15 = load %struct.file*, %struct.file** %4, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = load i32, i32* %6, align 4
  %18 = load %struct.file*, %struct.file** %4, align 8
  %19 = getelementptr inbounds %struct.file, %struct.file* %18, i32 0, i32 0
  %20 = call i32 %14(%struct.file* %15, i8* %16, i32 %17, i32* %19)
  %21 = load i32, i32* %6, align 4
  %22 = icmp eq i32 %20, %21
  br label %23

23:                                               ; preds = %9, %3
  %24 = phi i1 [ false, %3 ], [ %22, %9 ]
  %25 = zext i1 %24 to i32
  ret i32 %25
}

declare dso_local i32 @dump_interrupted(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
